# PrivetSuperApp

./:  README.md   # Code Citations.md  .env  .env.example  .gitignore  README.md  Untitled-1  bootstrap_client.sh  privet_manager_schema.sql
server/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  package.json  pyproject.toml  requirements.txt  smoke.py  test_smoke.py
server/alembic/: env.py  script.py.mako
server/alembic/versions/: 0001_init.py  0002_devices.py  0003_tickets.py  0004_users.py  0005_subscriptions.py  0006_merge_merge_users_subscriptions_branches.py  0b445c495839_add_new_to_ticket_status_t_default_new.py  34e296af6fe9_sync_models_support_faq_sessions_prt.py  35a1d7f0_add_deleted_blocked_to_user_status_enum.py  35b0_merge_ticket_and_user_enum_heads.py  57df349fc4c7_add_has_subscription_to_users.py  865cbc827c40_normalize_support_enums_and_add_user_to_.py  8a1b2c3d4e5f_add_address_to_users.py  8a1b2c3d4e5f_noop_bridge.py  a3d9a7c45bc1_add_address_to_users.py  b4e1c8f7d2a1_add_user_invoices.py
server/app/: auth.py  device_photos.py  device_schemas.py  devices.py  main.py  password_reset_tokens.py  sessions.py  tickets.py  users.py
server/app/api/: deps.py
server/app/core/: config.py  database.py  deps.py  mailer.py  phone.py  security.py
server/app/db/: session.py
server/certs/: localhost-cert.pem  localhost-key.pem
server/frontend/: .env.example  .npmrc  capacitor.config.ts  http.ts  index.html  package-lock.json  package.json  vite.config.ts
server/scripts/: accept_clients.py  docker_entrypoint.sh  seed_users.py
(+136 files in other folders)
