[project]
name = "privet-superapp-server"
version = "0.1.0"
description = "FastAPI backend for PrivetSuperApp"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy>=2.0",
  "psycopg[binary]",
  "alembic",
  "pydantic[email]>=2.0",
  "python-multipart",
  "passlib[argon2]",
  "boto3",
]
